--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 .title h3 {
   margin: 0;
-  color: #fff;
+  color: #404040;
   position: relative;
   z-index: 1;
   font-weight: 400;
@@ -13,7 +13,7 @@ html {
   vertical-align: top;
 }
 
-.title h3:after {
+.titleh3:after {
   content: "";
   width: 45px;
   height: 45px;
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-  background: #10101a;
+  background: #fff;
   font-family: sans-serif;
   font-size: 15px;
   font-weight: 400;
@@ -58,13 +58,13 @@ a:hover {
   position: fixed;
   bottom: 0;
   top: 0;
-  background: #0c0c14;
+  background: #8a817c;
   border-right: 1px solid rgba(11, 11, 19, 0.1);
   z-index: 99999;
 }
 
 .header-left .top a {
-  background: #ffc107;
+  background: #8a817c;
   color: white;
   font-weight: 600;
   text-decoration: none;
@@ -88,6 +88,10 @@ a:hover {
 
 .nav-menu li + li {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.me {
+  opacity: 75%;
 }
 
 .nav-link {
@@ -168,7 +172,7 @@ button.toggler-menu {
   overflow: hidden;
 }
 
-.banner:after {
+/* .banner:after {
   content: "";
   position: absolute;
   right: -20vh;
@@ -178,7 +182,7 @@ button.toggler-menu {
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.1);
   z-index: -1;
-}
+} */
 
 .top-fixed {
   position: absolute;
@@ -211,11 +215,11 @@ button.toggler-menu {
 
 .social a i {
   margin-right: 10px;
-  color: white;
+  color: #404040;
   width: 43px;
   height: 43px;
   border-radius: 50px;
-  border: 2px solid white;
+  border: 2px solid #404040;
   padding: 10px;
   line-height: 20px;
   text-align: center;
@@ -228,12 +232,13 @@ button.toggler-menu {
 .banner .me {
   position: absolute;
   right: 0;
-  width: 50vw;
+  width: 100%;
   height: 100%;
   background-size: cover;
   top: 0;
   background-repeat: no-repeat;
   background-position: top left;
+  opacity: 65%;
 }
 
 .box {
@@ -243,7 +248,7 @@ button.toggler-menu {
 }
 
 .box h6 {
-  color: white;
+  color: #404040;
   font-size: 20px;
   font-weight: 400;
   margin: 0 0 20px;
@@ -255,12 +260,12 @@ button.toggler-menu {
   font-weight: 700;
   line-height: 1;
   margin: 0 0 20px;
-  color: white;
+  color: #404040;
   font-family: "Poppins", sans-serif;
 }
 
 .box .lead {
-  color: white;
+  color: #404040;
   font-weight: 400;
   font-size: 18px;
   text-transform: uppercase;
@@ -270,7 +275,7 @@ button.toggler-menu {
 
 .box .desc {
   max-width: 450px;
-  color: white;
+  color: #404040;
   font-family: "Poppins", sans-serif;
 }
 
@@ -279,7 +284,7 @@ button.toggler-menu {
 }
 
 .btn-bar a {
-  color: white;
+  color: #404040;
   font-size: 25px;
   line-height: 1;
   font-weight: 400;
@@ -353,18 +358,19 @@ button.toggler-menu {
 }
 
 .about-me img {
-  border-radius: 50%;
+  /* border-radius: 50%; */
   overflow: hidden;
-  border: 5px solid white;
+  border: 5px solid #8a817c;
   position: relative;
   width: 400px;
   height: 400px;
   margin-left: -30px;
+  /* box-shadow: #0b0b13; */
 }
 
 .about-me .social-icons {
   position: absolute;
-  bottom: -15px;
+  bottom: -160px;
   left: 0;
   right: 0;
 }
@@ -373,9 +379,9 @@ button.toggler-menu {
   width: 45px;
   height: 45px;
   line-height: 41px;
-  background: #0b0b13;
-  border: 2px solid white;
-  color: #fff;
+  /* background: #0b0b13; */
+  border: 2px solid #404040;
+  color: #404040;
   text-align: center;
   border-radius: 50%;
   position: relative;
@@ -385,7 +391,7 @@ button.toggler-menu {
   margin-top: -150px;
 }
 
-.social-icons a i {
+/* .social-icons a i {
   line-height: inherit;
 }
 
@@ -403,7 +409,7 @@ button.toggler-menu {
 
 .social-icons a:nth-child(5) {
   top: -25px;
-}
+} */
 
 .social-icons a:hover {
   transform: scale(1.1);
@@ -414,7 +420,7 @@ button.toggler-menu {
 .info {
   text-align: center;
   padding-top: 40px;
-  color: white;
+  color: #404040;
   width: 300px;
   margin-left: 7%;
 }
@@ -431,7 +437,7 @@ button.toggler-menu {
 
 .info-list {
   padding-top: 15px;
-  color: white;
+  color: #0f1025;
 }
 
 .info-list ul {
@@ -445,25 +451,26 @@ button.toggler-menu {
 }
 
 .info-list label {
-  color: white;
+  color: #0f1025;
   margin: 0;
   font-weight: 400;
   padding-right: 10px;
 }
 
 .separated {
-  background-image: url(border.png);
+  background-image: url(line-dark.png);
   padding-top: 80px;
   padding-bottom: 80px;
   background-repeat: repeat-x;
   background-size: auto 6px;
   background-position: center;
+  background-color: ;
 }
 
 .box1 {
-  background: #0b0b13;
+  background: #b7b7a4;
   padding: 40px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -478,7 +485,7 @@ button.toggler-menu {
   height: 200px;
   border-radius: 0;
   z-index: -1;
-  background: #0b0b13;
+  background: #ffe8d6;
   transition: cubic-bezier(0.39, 0.58, 0.57, 1) all 0.55s;
 }
 
@@ -487,12 +494,13 @@ button.toggler-menu {
   position: absolute;
   top: -72px;
   left: -40px;
-  width: 200px;
-  height: 200px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   z-index: -2;
-  background-color: #f5d020;
-  background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
+  background-color: #ffe8d6;
+  /* background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%); */
+  background-image: ;
   transition: cubic-bezier(0.39, 0.58, 0.57, 1) all 0.15s;
 }
 
@@ -508,7 +516,7 @@ button.toggler-menu {
 
 .box1 h5 {
   margin-bottom: 30px;
-  color: white;
+  color: #404040;
   font-size: 25px;
 }
 
@@ -902,17 +910,19 @@ button.toggler-menu {
 .education-box {
   margin: 0;
   padding: 35px;
-  border-radius: 10px;
-  background: #13131e;
+  /* border-radius: 10px; */
+  background: #b7b7a4;
   list-style: none;
-  color: white;
+  color: #404040;
   width: 450px;
-  margin-top: 50x;
+  height: 550px;
+  margin-top: 50px;
   margin-left: -20px;
+  overflow: scroll;
 }
 
 .education-box h6 {
-  color: white;
+  color: #404040;
   margin: 5px 0;
   font-size: 30px;
   font-family: "Poppins", sans-serif;
@@ -934,7 +944,7 @@ button.toggler-menu {
   font-size: 400;
   margin-bottom: 60px;
   font-family: "Poppins", sans-serif;
-  color: white;
+  color: #0f1025;
 }
 
 .mh-professional-progress li {
@@ -951,7 +961,7 @@ button.toggler-menu {
   margin-bottom: 30px;
   margin-right: 20px;
   margin-top: -30px;
-  color: white;
+  color: #0f1025;
 }
 
 .mh-progress .progressbar-text {
@@ -980,7 +990,7 @@ button.toggler-menu {
 
 .contact-info h4 {
   font-size: 34px;
-  color: white;
+  color: #0f1025;
   font-weight: 400;
 }
 
@@ -997,7 +1007,7 @@ button.toggler-menu {
 .contact-info li {
   font-size: 18px;
   font-weight: 400;
-  color: white;
+  color: #0f1025;
   line-height: 1.3;
   position: relative;
 }
@@ -1005,7 +1015,7 @@ button.toggler-menu {
 .contact-info li i {
   width: 30px;
   text-align: center;
-  color: #ff9301;
+  color: #8a817c;
   font-size: 22px;
 }
 
@@ -1023,29 +1033,29 @@ button.toggler-menu {
 
 .contact-form h4 {
   font-weight: 400;
-  color: white;
+  color: #0f1025;
   font-size: 22px;
   margin-bottom: 20px;
 }
 
 .contact-form .form-control {
-  color: white;
+  color: #0f1025;
   background: none;
-  border: 1px solid rgba(255, 255, 255, 03);
+  border: 1px solid #0f1025;
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
   height: calc(2em + 0.75rem + 2px);
 }
 
-.contact-form textare.form-control {
-  height: auto;
+.contact-form textarea.form-control {
+  height: 170px;
 }
 
 .btn-primary {
-  border: 2px solid white;
+  border: 1.5px solid #404040;
   background: transparent;
-  color: white;
+  color: #0f1025;
   padding: 15px 35px;
 }
 
@@ -1069,7 +1079,7 @@ button.toggler-menu {
 
 .footer {
   padding: 12px 0;
-  background: #0b0b13;
+  background: #8a817c;
   font-family: "Poppins", sans-serif;
 }
 
