--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ button.toggler-menu {
   border-radius: 0;
   padding: 0;
   margin-left: 15px;
-  background: #ffc107;
   border: none;
   margin-left: auto;
 }
@@ -151,8 +150,8 @@ button.toggler-menu {
   width: 25px;
   height: 2px;
   margin: auto;
-  background: #fff;
-  color: white;
+  background: #8a817c;
+  color: #8a817c;
   box-shadow: 0px -8px 0 0 currentColor, 0px 8px 0 0 currentColor;
 }
 
@@ -326,6 +325,11 @@ button.toggler-menu {
   .banner .top-fixed {
     display: none !important;
   }
+
+  .banner .me {
+    position: absolute;
+    right: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -351,8 +355,10 @@ button.toggler-menu {
 @media (max-width: 991px) {
   .banner .me {
     opacity: 0.4;
-    width: 80vw;
+    width: 100%;
   }
+
+  .banner .me;
 }
 
 /* NOTE About Me */
@@ -370,9 +376,10 @@ button.toggler-menu {
   overflow: hidden;
   border: 5px solid #8a817c;
   position: relative;
-  width: 400px;
-  height: 400px;
-  margin-left: -30px;
+  width: 100%;
+  height: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
   /* box-shadow: #0b0b13; */
 }
 
@@ -549,6 +556,34 @@ button.toggler-menu {
 
 .box1:hover {
   transform: scale(1.2);
+}
+
+@media (max-width: 740px) {
+  .about-me img {
+    margin-left: 3%;
+  }
+
+  .info-list {
+    width: 100%;
+  }
+
+  .col-lg-7 {
+    margin-top: 20%;
+  }
+
+  .container .info {
+    margin-left: 15%;
+  }
+}
+
+@media (max-width: 990px) {
+  .about-me img {
+    /* width: 70%; */
+  }
+
+  .col-lg-7 {
+    /* margin-top: 100%; */
+  }
 }
 
 /* NOTE Projects */
@@ -1059,7 +1094,8 @@ button.toggler-menu {
 .mh-professional-skills h3 {
   font-size: 30px;
   line-height: 40px;
-  text-align: center;
+  /* text-align: center; */
+  /* margin-top: 65px; */
   margin-bottom: 60px;
 }
 
@@ -1217,7 +1253,7 @@ button.toggler-menu {
 
 .skill-bars {
   padding: 25px 30px;
-  width: 600px;
+  width: 100%;
   background: #fff;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
 }
@@ -1258,6 +1294,7 @@ button.toggler-menu {
     transform: scaleX(1);
   }
 }
+
 .bar .progress-line span {
   height: 100%;
   position: absolute;
@@ -1330,7 +1367,18 @@ button.toggler-menu {
   content: "65%";
 }
 
-@media (max-width: 550px) {
+@media (max-width: 767px) {
+  .row {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .mh-professional-skills h3 {
+    margin-top: 65px;
+  }
+}
+
+@media (max-width: 990px) {
 }
 
 /* NOTE Contact */
@@ -1390,6 +1438,7 @@ button.toggler-menu {
 }
 
 .contact-form .form-control {
+  width: 100%;
   color: #0f1025;
   background: none;
   border: 1px solid #0f1025;
@@ -1405,9 +1454,23 @@ button.toggler-menu {
 
 .btn-primary {
   border: 1.5px solid #404040;
+  border-radius: 0;
   background: transparent;
   color: #0f1025;
   padding: 15px 35px;
+}
+
+@media (max-width: 770px) {
+  .form-group {
+    /* width: 130%; */
+    /* background-color: #f33c3c; */
+    /* justify-content: center; */
+  }
+
+  .row {
+    /* background-color: #ff9301; */
+    /* width: 100%; */
+  }
 }
 
 /* NOTE Google Map */
@@ -1429,14 +1492,14 @@ button.toggler-menu {
 /* NOTE Footer */
 
 .footer {
-  padding: 12px 0;
-  background: #8a817c;
+  padding: 12px 0px;
+  /* background: #8a817c; */
   font-family: "Poppins", sans-serif;
 }
 
 .footer .nav a {
-  color: white;
-  font-size: 14px;
+  color: #8a817c;
+  font-size: 20px;
   margin: 17px;
 }
 
@@ -1445,7 +1508,12 @@ button.toggler-menu {
 }
 
 .footer p {
-  color: white;
+  color: #8a817c;
   font-stretch: 14px;
   margin: 0;
+}
+
+@media (max-width: 770px) {
+  input {
+  }
 }
