--- a/style.css
+++ b/style.css
@@ -18,15 +18,6 @@ ul {
   vertical-align: top;
 }
 
-.theme-light .title h3:after {
-  background: rgba(255, 147, 1, 0.5);
-}
-
-.navbar-brand a img {
-  width: 250px;
-  height: auto;
-}
-
 body {
   background: #fff;
   font-family: sans-serif;
@@ -147,6 +138,10 @@ button.toggler-menu {
 }
 
 @media (max-width: 767px) {
+  .me {
+    padding-left: 740px;
+  }
+
   .mob-header {
     display: block;
   }
@@ -461,7 +456,7 @@ button.toggler-menu {
 /* NOTE Works */
 
 #work {
-  margin-left: 7.7%;
+  margin-left: 9%;
   margin-right: 3%;
 }
 
