--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ ul {
 }
 
 body {
-  background: #fff;
   font-family: sans-serif;
   font-size: 15px;
   font-weight: 400;
@@ -366,9 +365,9 @@ button.toggler-menu {
 
 .about-me .social-icons {
   position: absolute;
-  bottom: -160px;
-  left: 0;
-  right: 0;
+  bottom: -34%;
+  left: 27%;
+  right: ;
 }
 
 .about-me .social-icons a {
