--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html {
+  /* background-color: #000; */
   overflow-x: hidden;
   scroll-behavior: smooth;
   position: relative;
@@ -23,6 +24,10 @@ body {
   font-family: sans-serif;
   font-size: 15px;
   font-weight: 400;
+}
+
+main {
+  /* background-color: #000; */
 }
 
 * {
