--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 html {
-  /* background-color: #000; */
   overflow-x: hidden;
   scroll-behavior: smooth;
   position: relative;
 }
-
+/*
 ul {
   list-style: none;
 }
@@ -24,21 +23,13 @@ body {
   font-family: sans-serif;
   font-size: 15px;
   font-weight: 400;
-}
-
-main {
-  /* background-color: #000; */
-}
+} */
 
 * {
   outline: none !important;
 }
 
 /* NOTE Navbar */
-
-a {
-  color: #ffc107;
-}
 
 a:hover {
   color: #ffc107;
@@ -47,21 +38,18 @@ a:hover {
 
 .header-left {
   width: 80px;
+  background-color: #8a817c;
   position: fixed;
-  bottom: 0;
   top: 0;
-  background: #8a817c;
+  bottom: 0;
   border-right: 1px solid rgba(11, 11, 19, 0.1);
   z-index: 99999;
 }
 
 .header-left .top a {
-  background: #8a817c;
   color: white;
   font-weight: 600;
-  text-decoration: none;
   font-size: 40px;
-  height: 80px;
   width: 80px;
   line-height: 80px;
   display: inline-block;
@@ -90,16 +78,8 @@ a:hover {
   margin: 0;
   padding: 10px 0;
   color: white;
-  text-decoration: none;
   transition: ease all 0.35s;
   text-align: center;
-}
-
-.nav-link i {
-  font-size: 37px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
 }
 
 button.toggler-menu {
@@ -144,7 +124,7 @@ button.toggler-menu {
 
 @media (max-width: 767px) {
   .me {
-    padding-left: 740px;
+    padding-left: 840px;
   }
 
   .mob-header {
@@ -226,7 +206,8 @@ button.toggler-menu {
 .home-box {
   padding-top: 90px;
   padding-bottom: 50px;
-  padding-left: 15%;
+  padding-left: 10%;
+  padding-right: 10%;
   font-family: "Poppins", sans-serif;
 }
 
@@ -240,7 +221,6 @@ button.toggler-menu {
 
 .home-box h1 {
   font-size: 80px;
-  font-weight: 700;
   line-height: 1;
   margin: 0 0 20px;
   color: #404040;
@@ -300,20 +280,12 @@ button.toggler-menu {
 }
 
 @media (max-width: 767px) {
-  html {
-    position: relative;
-  }
-
-  body {
-    position: absolute;
-  }
   .banner .top-fixed {
     display: none !important;
   }
 
-  .banner .me {
-    position: absolute;
-    right: 0;
+  .home-box h1 {
+    font-size: 52px;
   }
 }
 
@@ -339,19 +311,16 @@ button.toggler-menu {
 
 @media (max-width: 991px) {
   .banner .me {
-    opacity: 0.4;
+    opacity: 0.5;
     width: 100%;
   }
+  /* NOTE About Me */
 
-  .banner .me;
-}
-
-/* NOTE About Me */
-
+  /* 
 #about {
   font-family: "Poppins", sans-serif;
   margin-left: 7.7%;
-  margin-right: 3%;
+  margin-right: 3%; */
 }
 
 .about-me {
@@ -362,32 +331,28 @@ button.toggler-menu {
   overflow: hidden;
   border: 5px solid #8a817c;
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: auto;
   margin-left: 10%;
   margin-right: 10%;
 }
 
 .about-me .social-icons {
   position: absolute;
-  bottom: -34%;
-  left: 27%;
-  right: ;
+  right: 20%;
+  left: 20%;
 }
 
 .about-me .social-icons a {
   width: 45px;
-  height: 45px;
   line-height: 41px;
   border: 2px solid #404040;
   color: #404040;
   text-align: center;
   border-radius: 50%;
-  position: relative;
   margin: 0 5px;
   transition: ease all 0.35s;
   transform: scale(1);
-  margin-top: -150px;
 }
 
 .social-icons a:hover {
@@ -398,10 +363,8 @@ button.toggler-menu {
 
 .info {
   text-align: center;
-  padding-top: 40px;
+  margin-top: 25px;
   color: #404040;
-  width: 300px;
-  margin-left: 7%;
 }
 
 .info h3 {
@@ -443,39 +406,33 @@ button.toggler-menu {
   background-repeat: repeat-x;
   background-size: auto 6px;
   background-position: center;
-  margin-left: 9.4%;
-  margin-right: 3%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 @media (max-width: 740px) {
   .separated {
-    margin: 0 7% 0 7%;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 
-  .about-me img {
-    margin-left: 3%;
+  .title {
+    margin-top: 50px;
+    text-align: center;
   }
 
-  .info-list {
-    width: 100%;
-  }
-
-  .col-lg-7 {
-    margin-top: 20%;
-  }
-
-  .container .info {
-    margin-left: 15%;
+  .about-info {
+    margin-top: 30%;
   }
 }
 
 /* NOTE Works */
 
-#work {
+/* #work {
   margin-left: 9%;
   margin-right: 3%;
   align-items: center;
-}
+} */
 
 .box1 {
   background: #b7b7a4;
@@ -551,130 +508,14 @@ button.toggler-menu {
 }
 
 @media (max-width: 740px) {
-  .box1 {
-    width: 85%;
-  }
   .box2 {
     margin-top: 8%;
   }
 }
 
-/* NOTE Projects */
-
-.container #projects .title {
-  justify-content: center;
-  text-align: center;
-}
-
-#project {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 7.7%;
-  margin-right: 3%;
-}
-
-.project-filter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
-  flex-wrap: wrap;
-  margin: 20px;
-}
-
-.project-filter li {
-  margin: 10px;
-  padding: 5px 20px;
-  color: #404040;
-  font-size: 1rem;
-  letter-spacing: 0.5px;
-  font-weight: 400;
-  cursor: pointer;
-  user-select: none;
-}
-
-.project-filter-active {
-  background-color: #f0f0f0;
-}
-
-.project-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  max-width: 1200px;
-  margin: auto;
-}
-
-.project-box {
-  width: 330px;
-  padding: 15px;
-  border: 1px solid #eeeeee;
-  position: relative;
-}
-
-.project-box img {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  border-radius: 5px;
-}
-
-.project-box .image:hover {
-  transform: scale(1.06);
-  transition: 0.35s;
-}
-
-.middle {
-  transition: 0.5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.project-box:hover .image {
-  opacity: 0.3;
-}
-
-.project-box:hover .middle {
-  opacity: 1;
-}
-
-.text {
-  color: #404040;
-  font-size: 16px;
-}
-
-@media (max-wdith: 740px) {
-  .project-filter {
-    background-color: #f9f9f9;
-    border: 1px solid #0f1025;
-  }
-  .project-filter-active {
-    background-color: #ffffff;
-    border: 1px solid #0f1025;
-  }
-  .project-box {
-    width: 80%;
-  }
-}
-
-@media (max-width: 550px) {
-  .project-heading h3 {
-    font-size: 1.8rem;
-  }
-}
-
 /* NOTE Experience */
 
-.resume-box {
+/* .resume-box {
   font-family: "Poppins", sans-serif;
 }
 
@@ -700,10 +541,10 @@ button.toggler-menu {
 
 .education-box li + li {
   margin-top: 25px;
-}
+} */
 
 /* NOTE Skills */
-#skills {
+/* #skills {
   margin-left: 7%;
   margin-right: 3%;
 }
@@ -852,14 +693,124 @@ button.toggler-menu {
   .mh-professional-skills h3 {
     margin-top: 65px;
   }
+} */
+
+/* NOTE Projects */
+
+/* .container #projects .title {
+  justify-content: center;
+  text-align: center;
 }
 
-@media (max-width: 990px) {
+#project {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 7.7%;
+  margin-right: 3%;
 }
+
+.project-filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+  flex-wrap: wrap;
+  margin: 20px;
+}
+
+.project-filter li {
+  margin: 10px;
+  padding: 5px 20px;
+  color: #404040;
+  font-size: 1rem;
+  letter-spacing: 0.5px;
+  font-weight: 400;
+  cursor: pointer;
+  user-select: none;
+}
+
+.project-filter-active {
+  background-color: #f0f0f0;
+}
+
+.project-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.project-box {
+  width: 330px;
+  padding: 15px;
+  border: 1px solid #eeeeee;
+  position: relative;
+}
+
+.project-box img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.project-box .image:hover {
+  transform: scale(1.06);
+  transition: 0.35s;
+}
+
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.project-box:hover .image {
+  opacity: 0.3;
+}
+
+.project-box:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  color: #404040;
+  font-size: 16px;
+}
+
+@media (max-wdith: 740px) {
+  .project-filter {
+    background-color: #f9f9f9;
+    border: 1px solid #0f1025;
+  }
+  .project-filter-active {
+    background-color: #ffffff;
+    border: 1px solid #0f1025;
+  }
+  .project-box {
+    width: 80%;
+  }
+}
+
+@media (max-width: 550px) {
+  .project-heading h3 {
+    font-size: 1.8rem;
+  }
+} */
 
 /* NOTE Contact */
 
-#contact {
+/* #contact {
   margin-left: 7.7%;
   margin-right: 3%;
 }
@@ -939,22 +890,22 @@ button.toggler-menu {
   background: transparent;
   color: #0f1025;
   padding: 15px 35px;
-}
+} */
 
 /* NOTE Google Map */
 
-.google-map {
+/* .google-map {
   margin-top: 50px;
   box-shadow: 0 30px 60px rgba(0, 0, 0, 0.4);
 }
 
 .google-map .embed:before {
   padding-top: 40%;
-}
+} */
 
 /* NOTE Footer */
 
-.footer {
+/* .footer {
   padding: 12px 0px;
   font-family: "Poppins", sans-serif;
   margin-left: 7.7%;
@@ -975,4 +926,4 @@ button.toggler-menu {
   color: #8a817c;
   font-stretch: 14px;
   margin: 0;
-}
+} */
