--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   outline: none !important;
 }
 
-/* .reveal {
+.reveal {
   position: relative;
   transform: translateY(150px);
   opacity: 0;
@@ -44,7 +44,7 @@ body {
 .reveal.active {
   transform: translateY(0px);
   opacity: 1;
-} */
+}
 
 /* NOTE Navbar */
 
