--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ a:hover {
   border-right: 1px solid rgba(11, 11, 19, 0.1);
   z-index: 99999;
 }
-34 .header-left .top a {
+
+.header-left .top a {
   color: white;
   font-weight: 600;
   font-size: 40px;
